--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,46 @@
+aenum==3.1.15
+ai-api-client-sdk==2.0.4
+ai-core-sdk==2.1.1
 asgiref==3.8.1
+astroid==3.1.0
+awscli==1.32.70
+boto3==1.34.70
+botocore==1.34.70
+cachetools==5.3.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.4
+dill==0.3.8
 Django==5.0.3
+docutils==0.16
+google-auth==2.29.0
+idna==3.6
+isort==5.13.2
+jmespath==1.0.1
+kubernetes==29.0.0
+mccabe==0.7.0
+metaflow==2.8.0
 mysql-connector-python==8.3.0
+oauthlib==3.2.2
+platformdirs==4.2.0
+psycopg2==2.9.9
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pyhumps==3.8.0
+pylint==3.1.0
 PyMySQL==1.1.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+PyYAML==6.0.1
+requests==2.31.0
+requests-oauthlib==2.0.0
+rsa==4.7.2
+s3transfer==0.10.1
+sap-ai-core-metaflow==1.1.14
+six==1.16.0
 sqlparse==0.4.4
+tomlkit==0.12.4
 tzdata==2024.1
+urllib3==2.2.1
+websocket-client==1.7.0
